<android.support.v7.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistration"
    background="#FFF9C4"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/childlname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/lname"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/childfname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                />



            <EditText
                android:id="@+id/childmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/childinitial"
                android:inputType="textPersonName"
                />


            <EditText
                android:id="@+id/childbday"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/childbirthday"
                android:inputType="date"
                />

            <RadioButton
                android:id="@+id/rdbmale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Male"
                android:layout_marginTop="10dp"
                android:width="220dp"
                />

            <RadioButton
                android:id="@+id/rdbfemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Female"
                android:layout_marginTop="10dp"
                android:width="220dp"
                />

            <EditText
                android:id="@+id/childage"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/childage"
                android:inputType="number"
                />



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">


        <Button
            android:id="@+id/btnReg"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:text="@string/register"
            />
    </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>