<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardianInfo"
    background="#FFF9C4"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/guardiandetails"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/guardianlname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/guardianlname"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/guardianfname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/guardianfirstname"
                android:inputType="textPersonName"
                />



            <EditText
                android:id="@+id/guardianchildmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/guardianinitial"
                android:inputType="textPersonName"
                />


            <EditText
                android:id="@+id/emailaddress"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/emailadd"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/contactnumber"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/contactnumber"
                android:inputType="number"
                />

            <EditText
                android:id="@+id/relationship"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/relationship"
                android:inputType="text"
                />



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">


        <Button
            android:id="@+id/btnGuardianInfo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:text="@string/toguardian"
            />
    </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>